formatting, globe no longer overlaps nav bar (hopefully)

--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
     flex-direction: column;
 }
 
-
+p {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+}
 
 main {
     flex: 1;
@@ -54,6 +57,31 @@ header h1 {
     margin: 0;
     font-size: 2rem;
 }
+
+main a {
+    color: #00ffcc; 
+    text-decoration: none;
+}
+
+.music {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 20px 0;
+    padding: 20px;
+}
+
+.music p {
+    padding-left: 25%;
+    text-align: center;
+    padding-right: 25%;
+    position: relative;
+    overflow: scroll;
+}
+
+
 nav {
     margin-top: 10px;
 }
@@ -67,7 +95,7 @@ nav a:hover {
     color: #00AEEF;
 }
 .globe-container {
-    position: fixed;
+    position: relative;
     bottom: 20px;
     right: 20px;
     width: 100px;
